# progettoSO

./: CMakeLists.txt  README.md  Relazione Progetto SO.docx  compilazione.sh  dataset.csv  makefile  reduceDATAset.csv
lib/: common.h  first.h  ipc.h  p.h
src/: decision_function.c  failure_manager.c  input_manager.c  ipc.c  main.c  p.c  p1.c  p2.c  p3.c  watchdog.c
